# orangerpcd

./: .gitignore  .travis.yml  AUTHORS  COPYING  LICENSE  Makefile  Makefile.am  Makefile.in  NEWS  README  README.md  configure  configure.ac  internal.h  juci.example.config  juci_luaobject.c  juci_luaobject.h  main.c  orange  orange.config.example  orangectl.sh  package.json  revorpc  simple_configure  testuci.lua  version
docs/: config.md  lua-api.md  overview.md  rpc-api.md
example/: index.html  rpc2.js  simple.js
example-acl/: test.acl
lualib/juci/: core.lua  ethernet.lua  netstat.lua  network.lua  ubus.lua  uci.lua
lualib/orange/: core.lua  ethernet.lua  netstat.lua  network.lua  ubus.lua  uci.lua  wireless.lua
m4/: ax_valgrind_check.m4
plugins/: file.lua  network.interface.lua  network.wireless.lua  session.lua  simple.lua  system.lua  test.lua  uci.lua
plugins/juci/: ddns.lua  iptv.lua  juci.lua  network.status.lua  swconfig.lua  system.conf.lua  system.lua  system.service.lua  system.upgrade.lua  system.user.lua  wireless.lua
src/: Makefile.am  Makefile.in  base64.c  base64.h  internal.h  json_check.c  json_check.h  juci.c  juci.h  juci_id.c  juci_id.h  juci_lua.c  juci_lua.h  juci_luaobject.c  juci_luaobject.h  juci_message.c  juci_message.h  juci_server.h  juci_session.c  juci_session.h  juci_uci.c  juci_uci.h  juci_user.c  juci_user.h  juci_ws_server.c  juci_ws_server.h  main-client.c  main.c  mimetypes.h  orange.c  orange.h  orange_eq.c  orange_eq.h  orange_id.c  orange_id.h  orange_lua.c  orange_lua.h  orange_luaobject.c  orange_luaobject.h  orange_message.c  (+15 more)
test/: Makefile.am  Makefile.in  b64.c  id.c  json_check.c  orange.c  session.c  sha1.c  test-funcs.h  test-pwfile  ws_server.c  ws_server_tests.sh
test/test-acls/: test-acl.acl
test/test-plugins/: invalid-plugin.lua  test.lua
test/test-plugins/subdir/: submod.lua
testapi/: access.acl  session.lua  simple.lua
